--- a/backend/public/assets/demo/demo.css
+++ b/backend/public/assets/demo/demo.css
@@ -57,3 +57,8 @@
   max-width: 530px;
   margin: 0 auto;
 }
+.btn-primary-outline {
+  background-color: transparent;
+  border-color: transparent;
+  box-shadow: none;
+}
