--- a/backend/public/assets/css/now-ui-dashboard.css
+++ b/backend/public/assets/css/now-ui-dashboard.css
@@ -448,13 +448,13 @@ Copyright (c) 2015 Daniel Eden
     top: 1px; }
 
 .btn-primary {
-  background-color: #f96332;
+  background-color: #007bff;
   color: #FFFFFF; }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary:active:focus, .btn-primary:active:hover, .btn-primary.active:focus, .btn-primary.active:hover,
   .show > .btn-primary.dropdown-toggle,
   .show > .btn-primary.dropdown-toggle:focus,
   .show > .btn-primary.dropdown-toggle:hover {
-    background-color: #fa7a50;
+    background-color: #1f8bff;
     color: #FFFFFF;
     -webkit-box-shadow: none;
             box-shadow: none; }
@@ -468,22 +468,22 @@ Copyright (c) 2015 Daniel Eden
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:active,
   fieldset[disabled] .btn-primary.active {
-    background-color: #f96332;
-    border-color: #f96332; }
+    background-color: #007bff;
+    border-color: #007bff; }
   .btn-primary.btn-simple {
-    color: #f96332;
-    border-color: #f96332; }
+    color: #007bff;
+    border-color: #007bff; }
     .btn-primary.btn-simple:hover, .btn-primary.btn-simple:focus, .btn-primary.btn-simple:active {
       background-color: transparent;
-      color: #fa7a50;
-      border-color: #fa7a50;
+      color: #1f8bff;
+      border-color: #1f8bff;
       -webkit-box-shadow: none;
               box-shadow: none; }
   .btn-primary.btn-link {
-    color: #f96332; }
+    color: #007bff; }
     .btn-primary.btn-link:hover, .btn-primary.btn-link:focus, .btn-primary.btn-link:active {
       background-color: transparent;
-      color: #fa7a50;
+      color: #1f8bff;
       text-decoration: none;
       -webkit-box-shadow: none;
               box-shadow: none; }
