--- a/css/contact.css
+++ b/css/contact.css
@@ -44,6 +44,24 @@
     /* height: 100vh; */
 }
 
+.contactBanner{
+    background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url('../資訊圖庫/A25.jpg');
+    background-color: rgb(255, 255, 255);
+    background-position: center;
+    width:100%; 
+    height: 450px;
+    background-size: cover;
+
+}
+.contactBanner img{
+    
+    width:100px;
+    position: relative;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+
+}
 
 /* 以下MAP */
 
