--- a/css/news.css
+++ b/css/news.css
@@ -172,7 +172,7 @@ a:hover {
     overflow: hidden;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
     margin: 10px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 @media only screen and (max-width:992px) {
