--- a/css/index-animation.css
+++ b/css/index-animation.css
@@ -1,3 +1,51 @@
+.indexp3 {
+  margin-top: 15px;
+  font-family: 'Noto Sans TC', sans-serif;
+  font-weight: 500;
+  font-size: 10px;
+  color:  rgb(0, 90, 175);
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  transform: translate(-40%, -50%);
+}
+.scroll-downs {
+  position: absolute;
+  top: 80vh;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  
+  width :34px;
+  height: 55px;
+}
+.mousey {
+  width: 2px;
+  padding: 8px 8px;
+  height: 15px;
+  border: 1.5px solid rgb(0, 90, 175);
+  border-radius: 25px;
+  opacity: 0.75;
+  box-sizing: content-box;
+}
+.scroller {
+  width: 3px;
+  height: 10px;
+  border-radius: 25%;
+  background-color:  rgb(0, 90, 175);
+  animation-name: scroll;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+  animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(10px); opacity: 0;}
+}
+
 .indexanimate {
     position: fixed;
     top: 0;
