--- a/backend/public/assets/css/now-ui-dashboard.css
+++ b/backend/public/assets/css/now-ui-dashboard.css
@@ -822,29 +822,29 @@ fieldset[disabled]
   display: none; }
 
 .form-control::-moz-placeholder {
-  color: #DDDDDD;
+  color: #454545;
   opacity: 1;
   filter: alpha(opacity=100); }
 
 .form-control:-moz-placeholder {
-  color: #DDDDDD;
+  color: #454545;
   opacity: 1;
   filter: alpha(opacity=100); }
 
 .form-control::-webkit-input-placeholder {
-  color: #DDDDDD;
+  color: #454545;
   opacity: 1;
   filter: alpha(opacity=100); }
 
 .form-control:-ms-input-placeholder {
-  color: #DDDDDD;
+  color: #454545;
   opacity: 1;
   filter: alpha(opacity=100); }
 
 .form-control {
   background-color: transparent;
   border: 1px solid #E3E3E3;
-  border-radius: 30px;
+  border-radius: 6px;
   color: #2c2c2c;
   line-height: normal;
   font-size: 0.8571em;
