--- a/css/news.css
+++ b/css/news.css
@@ -513,6 +513,26 @@ a:hover {
     /* border: 1px solid #818181; */
 }
 
+.routerImg{
+    width: 100%;
+    height:180px;
+    
+}
+
+.routerImg div{
+    width:100%;
+    height:100%;
+}
+
+.routerImg img{
+    width:100%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
 @media only screen and (max-width: 992px) {
     .Cooperate {
         align-items: center;
