--- a/css/contact.css
+++ b/css/contact.css
@@ -44,6 +44,12 @@
     /* height: 100vh; */
 }
 
+.Line{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+}
+
 .contactBanner{
     background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url('../資訊圖庫/A25.jpg');
     background-color: rgb(255, 255, 255);
