--- a/backend/public/assets/css/main.css
+++ b/backend/public/assets/css/main.css
@@ -1,11 +1,14 @@
+
+
+
 .mainView {
-    height:80%;
     text-align: center;
+    margin-top: 45vh;
+    transform: translateY(-50%);
 }
 
 .mainView h2{
     position: relative;
-    top:30%;
     font-size: 25px;
     font-weight: 400;
     color:#757575;
@@ -14,8 +17,6 @@
 }
 
 .mainView img{
-    position:relative;
-    top:30%;
     height:300px;
 }
 
