--- a/backend/public/assets/css/now-ui-dashboard.css
+++ b/backend/public/assets/css/now-ui-dashboard.css
@@ -1106,7 +1106,7 @@ fieldset[disabled]
 
 textarea.form-control {
   max-width: 100%;
-  max-height: 80px;
+  max-height: 100%;
   padding: 5px;
   padding-top: 2px;
   resize: none;
