--- a/css/news.css
+++ b/css/news.css
@@ -376,7 +376,7 @@ a:hover {
     background-clip: border-box;
     border: 0;
     border-radius: 0.25rem;
-    height: 35vh;
+    height: 250px;
     width: auto;
     overflow: hidden;
     object-fit: cover;
