--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,8 @@
 .indexAbout {
     height: 700px;
     width: 100%;
-    background-image: url(../img/index/chairs-2181919_1920.jpg);
+    background-image: url(../img/aboutUs/group.jpg);
+    background-size: contain;
 }
 
 .indexNews{
